--- a/SITE/HOME/opcoes/cadastros/styleperfis.css
+++ b/SITE/HOME/opcoes/cadastros/styleperfis.css
@@ -1,97 +1,131 @@
-*{ 	margin: 0; 
-	padding: 0; 
-    background-color: rgb(240, 240, 240);
-    font-family:Calibri, Candara, Segoe, Segoe UI, Optima, Arial, sans-serif;
-}
-body{
-	width: 100%;
-	height: 100%;
-}
-.all-tudo{
-	font-family:Calibri, Candara, Segoe, Segoe UI, Optima, Arial, sans-serif;
+*{
+	background-color: #f7f7f7;
+	
 }
 
-*{
+.all-tudo{
+	
+	font-family: Arial Black;
+
+}
+.all-tudo > .all-tudo-2{
+	font-family: arial;
+ }
+
+
+/*ESPAÇO*/
+
+.menu-container {
+	position: relative;
+	margin: 10;
+	padding: 0;
+	width: 60px;
+	height: 100vh;
+	background-color: #ffffff;
+	
+  }
+  
+  .toggle {
+	position: absolute;
+	top: 80%;
+	left: 100%;
+	margin-top: -22px;
+	margin-left: 15px;
+	cursor: pointer;
+	z-index: 1;
+	width: 60px;
+	height: 44px;
+	background-color: rgba(5, 79, 119, 0.5);
+	border-radius: 5px;
+  }
+  
+  .menu {
+	position: absolute;
+	top: 0;
+	left: -60px;
+	width: 200px;
+	height: 100%;
+	padding: 50px 0;
+	background-color: #ffffff;
+	-webkit-transition: all 0.3s ease-out;
+	transition: all 0.3s ease-out;
+	box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);
+	border-right: 5px solid #61bbd6;
+  }
+  
+  .menu ul {
+	list-style: none;
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-html{
-	overflow-y:hidden;
-}
-
-html, body{height: 100%;}
-
-.main{
-	display: flex;
-	flex-wrap: wrap;
-	height: 100%;
-}
-
-.sidebar{
-	padding:0 35px;
-	width: 20%;
-	background-color: white;
-	height: 200%;
-	box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);
-}
-
-
-.sidebar>h2{
-	position:relative;
-	left: -20px;
-	background-color: white;
-}
-
-.sidebar h4{
-	color: #4682B4;
-	font-size: 20px;
-
-}
-.sidebar h5{
-	color: #4682B4;
-	font-size: 16px;
-
-}
-
-.sidebar a{
+  }
+  
+  .menu li {
+	margin: 0;
+  }
+  
+  .menu a {
 	display: block;
+	padding: 20px;
+	color: #2b7199;
 	text-decoration: none;
-	margin-left: 15px;
-	margin-top: 10px;
-	color: #4682B4;
-}
+	-webkit-transition: all 0.3s ease-out;
+	transition: all 0.3s ease-out;
+  }
+  
+  .menu a:hover {
+	border-radius: 3px;
+	background-color: #a3a3a3;
+  }
+  
+  input[type="checkbox"]#toggle:checked ~ .menu {
+	left: 0;
+  }
 
-.sidebar a:hover{
-	border-left: 4px solid #73b4ff;
-	background-color: rgb(245,245,245);
-	font-weight: bold;
-}
-.sidebar a:hover .sidebar a > svg{
-	color: #4682B4;
-}
+  /*sub*/
 
-.content{
-	width: 80%;
-	background-color: rgb(245, 245, 245);
+  .custom-select {
+	width: 200px;
+	padding: 10px;
+	font-size: 16px;
+	border: 0 solid transparent;
+	border-radius: 0px;
+  }
+  
+  .custom-select option {
+	padding: 10px;
+  }
+
+  select option:checked::before {
+	content: "✓";
+	color: #fff;
+	background-color: #333;
+	margin-right: 10px;
+  }
+
+  /*icone*/
+
+  ul li {
+	list-style-type: none; /* remova o estilo padrão de marcador */
+	position: relative; /* adicione uma posição relativa para posicionar o ícone */
+	padding-left: 30px; /* adicione espaço à esquerda do texto para o ícone */
+  }
+
+  ul li .icone {
+	position: absolute; /* posicione o ícone absolutamente */
+	left: 0; /* posicione o ícone à esquerda do elemento pai */
+	top: 20px; /* posicione o ícone no topo do elemento pai */
+	width: 20px; /* ajuste a largura do ícone conforme necessário */
+	height: 20px; /* ajuste a altura do ícone conforme necessário */
+	background-image: url("icone.png"); /* adicione a imagem do ícone como conteúdo antes do texto */
+	background-repeat: no-repeat; /* evite que a imagem se repita */
+	background-position: center; /* posicione o ícone no centro vertical e horizontalmente */
+	width: 7px;
 }
-
-.Filtro{
-	position-top: 80px;
-}
-
-.container-banner > .center{
-	height: 100%;
-	/*text-align: right*/
-}
-
-
+/*Espaço*/
 
 #tabela{
 	position: relative;
-	margin-top: 80px;
+	margin-top: 750px;
 
 }
 
@@ -223,3 +257,39 @@ h2{
 .hidden {
   display: none;
 }
+
+/**/
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+  
+  td, th {
+    border: 1px solid #dddddd;
+    text-align: center;
+    padding: 8px;
+  }
+  
+  tr:nth-child(even) {
+    background-color: #dddddd;
+  }
+  
+  tr:hover {
+    background-color: #f2f2f2;
+    cursor: pointer;
+  }
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+  
+  td, th {
+    border: 1px solid #dddddd;
+    padding: 8px;
+  }
+  
+  tr:nth-child(even) {
+    background-color: #dddddd;
+  }
