--- a/SITE/TELA DE LOGIN/css/style.css
+++ b/SITE/TELA DE LOGIN/css/style.css
@@ -124,3 +124,18 @@ p{
 	font-family: Arial Black;
 	font-size: 12px;
 }
+
+/**/
+
+
+
+.icone {
+	position: absolute;
+	left: 0; 
+	top: 20px; 
+	width: 20px; 
+	height: 20px; 
+	background-image: url("icone.png"); 
+	background-repeat: no-repeat; 
+	background-position: center; 
+}
