--- a/cemweb/dashboard/cadastros/designer.css
+++ b/cemweb/dashboard/cadastros/designer.css
@@ -14,6 +14,8 @@ body{
   overflow-x: hidden;
 }
 
+
+
 .menu-lateral{
   width: 50px;
   height: 100%;
@@ -82,96 +84,199 @@ ul li.item-menu a .icon > i{
 
 
 
-.links-box{
-    position: absolute;
-    display: flex;
-    top: 15%;
-    left: 15%;
-    background-color: #4682B4;
-    
-    height: 12%;
-    width: 23%;
-    border-radius: 15px;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    font-size: 150%;
-    color: white;
-    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);
+
+
+/*opções de cadastro*/
+
+.container {
+  position: absolute;
+  width: 1000px;
+  display: flex;
+  justify-content: space-between;
+  left: 50%;
+  transform: translateX(-500px);
 }
 
-.links-box:hover{
-    transform: scale(1.1);
-    background-color: #3a6c94;
+.container .card {
+  position: relative;
+  cursor: pointer;
 }
-.links-box1{
-    position: absolute;
-    display: flex;
-    top: 15%;
-    left: 45%;
-    background-color: #4682B4;
-    height: 12%;
-    width: 23%;
-    border-radius: 15px;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    font-size: 150%;
-    color: white;
-    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);
+
+.container .card .face {
+  position: absolute;
+  width: 300px;
+  height: 200px;
+  border-radius: 9px;
 }
-.links-box1:hover{
-    transform: scale(1.1);
-    background-color: #3a6c94;
+
+.container .card .face.face1 {
+  position: relative;
+  background: rgb(35,107,142);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  transform: translateY(100px);
+  transition: 0.5s;
 }
-.links-box2{
-    position: absolute;
-    display: flex;
-    top: 15%;
-    left: 75%;
-    background-color: #4682B4;
-    height: 12%;
-    width: 23%;
-    border-radius: 15px;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    font-size: 150%;
-    color: white;
-    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);
+
+.container .card:hover .face.face1 {
+  background: rgb(25, 78, 104);
+  transform: translateY(0);
 }
-.links-box2:hover{
-    transform: scale(1.1);
-    background-color: #3a6c94;
+
+.container .card .face.face1 .content {
+  opacity: 0.2;
+  transition: 0.5s;
+}
+
+.container .card:hover .face.face1 .content {
+  opacity: 1;
+}
+
+.container .card .face.face1 .content bi bi-border-all,
+.container .card .face.face1 .content h3 {
+  margin: 10px 0 0;
+  padding: 0;
+  color: #fff;
+  text-align: center;
+  font-size: 1.5em;
+}
+
+.container .card .face.face2 {
+  position: absolute;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  box-sizing: border-box;
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
+  transform: translateY(-100px);
+  transition: 0.5s;
+}
+
+.container .card:hover .face.face2 {
+  transform: translateY(0);
+}
+
+.container .card .face.face2 .content p {
+  margin: 0;
+  padding: 0;
+}
+
+.container .card .face.face2 .content a {
+  margin: 15px 0 0;
+  display: inline-block;
+  text-decoration: none;
+  font-weight: 900;
+  color: #333;
+  padding: 5px;
+  border: 0.1px solid #333;
+  border-radius: 5px;
+}
+
+.container .card .face.face2 .content a:hover {
+  background: rgb(35,107,142);
+  color: #fff;
 }
 
 
 
 
 /**/
-.linha-separa{
-  position: absolute;
-  top: 70%;
-  border-radius: 8px;
-  padding: 2px 100%;
-  background-color: #3a6c94;
 
+.container1 {
+  position: absolute;
+  width: 1000px;
+  display: flex;
+  justify-content: space-between;
+  top: 50vh;
+  left: 50%;
+  transform: translateX(-500px);
 }
 
-
-
-#slideshow {
-  position: absolute;
+.container1 .card {
+  position: relative;
+  cursor: pointer;
 }
 
-#slideshow img {
+.container1 .card .face {
   position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  transition: opacity 1s ease-in-out;
+  width: 300px;
+  height: 200px;
+  border-radius: 9px;
 }
 
-#slideshow img.active {
+.container1 .card .face.face1 {
+  position: relative;
+  background: rgb(35,107,142);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  transform: translateY(100px);
+  transition: 0.5s;
+}
+
+.container1 .card:hover .face.face1 {
+  background: rgb(25, 78, 104);
+  transform: translateY(0);
+}
+
+.container1 .card .face.face1 .content {
+  opacity: 0.2;
+  transition: 0.5s;
+}
+
+.container1 .card:hover .face.face1 .content {
   opacity: 1;
 }
+
+.container1 .card .face.face1 .content bi bi-border-all,
+.container1 .card .face.face1 .content h3 {
+  margin: 10px 0 0;
+  padding: 0;
+  color: #fff;
+  text-align: center;
+  font-size: 1.5em;
+}
+
+.container1 .card .face.face2 {
+  position: absolute;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  box-sizing: border-box;
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
+  transform: translateY(-100px);
+  transition: 0.5s;
+}
+
+.container1 .card:hover .face.face2 {
+  transform: translateY(0);
+}
+
+.container1 .card .face.face2 .content p {
+  margin: 0;
+  padding: 0;
+}
+
+.container1 .card .face.face2 .content a {
+  margin: 15px 0 0;
+  display: inline-block;
+  text-decoration: none;
+  font-weight: 900;
+  color: #333;
+  padding: 5px;
+  border: 0.1px solid #333;
+  border-radius: 5px;
+}
+
+.container1 .card .face.face2 .content a:hover {
+  background: rgb(35,107,142);
+  color: #fff;
+}
+
